<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_high"
        android:background="@drawable/wordgame_menu_background"
        android:padding="@dimen/menu_padding"
        tools:context=".AppActivity">

        <Button
            android:id="@+id/tic_tac_toe_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:layout_gravity="center"
            android:text="@string/tic_tac_toe_label" />

        <Button
            android:id="@+id/dictionary_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:layout_gravity="center"
            android:text="@string/dictionary_label" />

        <Button
            android:id="@+id/word_game_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:layout_gravity="center"
            android:text="@string/word_game_label" />

        <Button
            android:id="@+id/communication_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:layout_gravity="center"
            android:text="@string/communication_label" />

        <Button
            android:id="@+id/two_player_word_game_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:layout_gravity="center"
            android:text="@string/two_player_word_game_label" />

        <Button
            android:id="@+id/two_player_trickiest_part_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:layout_gravity="center"
            android:text="@string/two_player_trickiest_part_label" />

        <Button
            android:id="@+id/final_project_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:layout_gravity="center"
            android:text="@string/final_project_label" />

        <Button
            android:id="@+id/generate_error_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:layout_gravity="center"
            android:text="@string/generate_error_label" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:layout_gravity="center"
            android:text="@string/about_label" />

        <Button
            android:id="@+id/quit_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:layout_gravity="center"
            android:text="@string/quit_label" />

    </LinearLayout>

</ScrollView>

